# calculator

./: CMakeLists.txt  README.md
src/: main.cpp  solution.cpp  solution.hpp
unittests/: CMakeLists.txt  test.cpp
